--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,26 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.input-group, .button-group {
+  margin-bottom: 10px;
+}
+
+select, input, button {
+  margin-right: 10px;
+  padding: 5px;
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+select, input {
+  width: 200px; /* Set a fixed width for inputs and dropdown */
+}
+
+button {
+  padding: 5px 10px;
+}
+
+h1{
+  text-align: center;
+}
